Adding abstract reconsiler to generalize delete logic between Kafka and Zookeeper
Signed-off-by: Steffen Karlsson <steffen.karlsson@maersk.com>