@@ -107,7 +107,7 @@ import static io.strimzi.operator.common.Annotations.ANNO_STRIMZI_SERVER_CERT_HA
  * and is also used to store the state between them.
  */
 @SuppressWarnings({"checkstyle:ClassFanOutComplexity"})
-public class KafkaReconciler {
+public class KafkaReconciler extends AbstractReconciler {
     private static final ReconciliationLogger LOGGER = ReconciliationLogger.create(KafkaReconciler.class.getName());
 
     // Various settings
@@ -121,8 +121,6 @@ public class KafkaReconciler {
     private final ImagePullPolicy imagePullPolicy;
     private final List<LocalObjectReference> imagePullSecrets;
 
-    // Objects used during the reconciliation
-    /* test */ final Reconciliation reconciliation;
     private final KafkaCluster kafka;
     private final List<KafkaNodePool> kafkaNodePoolCrs;
     private final ClusterCa clusterCa;
@@ -135,8 +133,6 @@ public class KafkaReconciler {
     private final SecretOperator secretOperator;
     private final ServiceAccountOperator serviceAccountOperator;
     private final ServiceOperator serviceOperator;
-    private final PvcOperator pvcOperator;
-    private final StorageClassOperator storageClassOperator;
     private final ConfigMapOperator configMapOperator;
     private final NetworkPolicyOperator networkPolicyOperator;
     private final PodDisruptionBudgetOperator podDisruptionBudgetOperator;
@@ -192,7 +188,8 @@ public class KafkaReconciler {
             KafkaMetadataStateManager kafkaMetadataStateManager,
             MetricsHolder metrics
     ) {
-        this.reconciliation = reconciliation;
+        super(reconciliation, supplier.pvcOperations, supplier.storageClassOperations);
+
         this.vertx = vertx;
         this.operationTimeoutMs = config.getOperationTimeoutMs();
         this.kafkaNodePoolCrs = nodePools;
@@ -216,8 +213,6 @@ public class KafkaReconciler {
         this.secretOperator = supplier.secretOperations;
         this.serviceAccountOperator = supplier.serviceAccountOperations;
         this.serviceOperator = supplier.serviceOperations;
-        this.pvcOperator = supplier.pvcOperations;
-        this.storageClassOperator = supplier.storageClassOperations;
         this.configMapOperator = supplier.configMapOperations;
         this.networkPolicyOperator = supplier.networkPolicyOperator;
         this.podDisruptionBudgetOperator = supplier.podDisruptionBudgetOperator;
@@ -941,21 +936,14 @@ public class KafkaReconciler {
      * Deletion of PVCs after the cluster is deleted is handled by owner reference and garbage collection. However,
      * this would not help after scale-downs. Therefore, we check if there are any PVCs which should not be present
      * and delete them when they are.
-     *
      * This should be called only after the StrimziPodSet reconciliation, rolling update and scale-down when the PVCs
      * are not used any more by the pods.
      *
      * @return  Future which completes when the PVCs which should be deleted are deleted
      */
     protected Future<Void> deletePersistentClaims() {
-        return pvcOperator.listAsync(reconciliation.namespace(), kafka.getSelectorLabels())
-                .compose(pvcs -> {
-                    List<String> maybeDeletePvcs = pvcs.stream().map(pvc -> pvc.getMetadata().getName()).collect(Collectors.toList());
-                    List<String> desiredPvcs = kafka.generatePersistentVolumeClaims().stream().map(pvc -> pvc.getMetadata().getName()).collect(Collectors.toList());
-
-                    return new PvcReconciler(reconciliation, pvcOperator, storageClassOperator)
-                            .deletePersistentClaims(maybeDeletePvcs, desiredPvcs);
-                });
+        List<String> expectedPvcs = kafka.generatePersistentVolumeClaims().stream().map(pvc -> pvc.getMetadata().getName()).toList();
+        return super.deletePersistentClaims(expectedPvcs, kafka.getSelectorLabels());
     }
 
     /**
